@@ -23,6 +23,7 @@
   *  - Added board hardware driver support for the Linnix UDIP development board
   *  - Added board hardware driver support for the Busware BUI development board
   *  - Added board hardware driver support for the Arduino Uno development board
+  *  - Added board hardware driver support for the Busware CUL V3 868MHZ radio board
   *
   *  <b>Changed:</b>
   *  - Removed complicated logic for the Endpoint_ConfigureEndpoint() function to use inlined or function called versions
